--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,8 +2,12 @@ doctype 5
 html
 	head
 		title Something went wrong
-		meta(name='description', content='BSOD API made with node.js! :)')
+		meta(name='description', content='BSOD API made with node.js! Are you ready to buuuuuug just like in good old time? :)')
 		meta(name='author', content='GabLeRoux')
+		meta(property="og:image", content="img/bsod-icon.jpg")
+		meta(property="og:image:type", content="image/jpeg")
+		meta(property="og:image:width", content="500")
+		meta(property="og:image:height", content="500")
 		link(rel='author', href='humans.txt')
 		link(rel='stylesheet', href='/css/xp.css')
 	block content
