--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,7 +4,7 @@ html
 		title Something went wrong
 		meta(name='description', content='BSOD API made with node.js! Are you ready to buuuuuug just like in good old time? :)')
 		meta(name='author', content='GabLeRoux')
-		meta(property="og:image", content="img/bsod-icon.jpg")
+		meta(property="og:image", content="#{url}/img/bsod-icon.jpg")
 		meta(property="og:image:type", content="image/jpeg")
 		meta(property="og:image:width", content="500")
 		meta(property="og:image:height", content="500")
