--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,13 +1,19 @@
 doctype 5
 html
 	head
-		title Something went wrong
+		title #{title}
 		meta(name='description', content='BSOD API made with node.js! Are you ready to buuuuuug just like in good old time? :)')
 		meta(name='author', content='GabLeRoux')
-		meta(property="og:image", content="#{url}/img/bsod-icon.jpg")
+		link(rel='author', href='humans.txt')
+
+		//- Facebook open graph
+		meta(property="og:title", content="#{title}")
+		meta(property="og:url", content="#{url}")
+		meta(property="og:image", content="#{host}/img/bsod-icon.jpg")
 		meta(property="og:image:type", content="image/jpeg")
 		meta(property="og:image:width", content="500")
 		meta(property="og:image:height", content="500")
-		link(rel='author', href='humans.txt')
+
+		//- basic design
 		link(rel='stylesheet', href='/css/xp.css')
 	block content
