--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,13 +2,14 @@ doctype 5
 html
 	head
 		title #{title}
-		meta(name='description', content='BSOD API made with node.js! Are you ready to buuuuuug just like in good old time? :)')
+		meta(name='description', content='#{description}')
 		meta(name='author', content='GabLeRoux')
 		link(rel='author', href='humans.txt')
 
 		//- Facebook open graph
 		meta(property="og:title", content="#{title}")
 		meta(property="og:url", content="#{url}")
+		meta(property="og:description", content="#{description}")
 		meta(property="og:image", content="#{host}/img/bsod-icon.jpg")
 		meta(property="og:image:type", content="image/jpeg")
 		meta(property="og:image:width", content="500")
