--- a/views/layout.jade
+++ b/views/layout.jade
@@ -17,4 +17,6 @@ html
 
 		//- basic design
 		link(rel='stylesheet', href='/css/xp.css')
-	block content
+	body
+		block content
+		script(src='/js/analytics.js')
